fix line height and spacing of title

--- a/components/markdown.css
+++ b/components/markdown.css
@@ -556,11 +556,14 @@ object {
 }
 
 .markdown-posts h1,
-.markdown-posts h2,
 .markdown-posts h3,
 .markdown-posts h4,
 .markdown-posts h5,
 .markdown-posts h6 {
   line-height: 1;
   margin-top: 40px;
+}
+
+.markdown-posts h2 {
+  line-height: 1.5;
 }
